# CTCToolKit

./: README.md  pyproject.toml
scripts/: csc_clean.py  m2_to_para.py  remove_special_tag.py
scripts/data/: csc_clean.py  fcgec_refine.py  handle_leakage.py
src/ctctk/base_class/: metric.py
src/ctctk/metrics/csc/: evaluate.py  utils.py
src/ctctk/utils/: algorithm.py
